test_programs/compile_failure/trait_default_method_call_stack/src/main.nr
trait Failer {
    fn fail(self) {
        std::static_assert(false, "trait default failure");
    }
}

struct S {}

impl Failer for S {}

fn main() {
    S {}.fail();
}
